# spec

./: .gitignore  Makefile  NOTICE  README.md  buf.gen.yaml
.github/workflows/: ci.yml  release-server.yml  release.yml  shared-release.yml
.reuse/: dep5
go/: go.mod
openapi/chaukas/spec/v1/: public.yaml
proto/chaukas/spec/client/v1/: client.proto
proto/chaukas/spec/common/v1/: events.proto  query.proto
proto/chaukas/spec/server/v1/: server.proto
proto/client/v1/: client.proto
proto/common/v1/: events.proto  query.proto
proto/server/v1/: server.proto
python/: README.md  pyproject.toml
python-client/: pyproject.toml
python-server/: pyproject.toml
python/chaukas/: __init__.py
python/chaukas/spec/: __init__.py
python/chaukas/spec/client/: __init__.py
python/chaukas/spec/client/v1/: __init__.py
python/chaukas/spec/common/: __init__.py
python/chaukas/spec/common/v1/: __init__.py
python/chaukas/spec/server/: __init__.py
python/chaukas/spec/server/v1/: __init__.py
resources/: client-init.py  server-init.py
scripts/: build-client.sh  build-server.sh
