[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaukas-spec"
version = "1.0.0"
description = "Protocol Buffer specifications for Chaukas agent audit and explainability platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chaukas Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "protobuf>=4.0.0",
    "grpcio>=1.50.0",
]

[project.urls]
Homepage = "https://github.com/chaukasai/spec"
Repository = "https://github.com/chaukasai/spec"
Issues = "https://github.com/chaukasai/spec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaukas*"]

[tool.setuptools.package-data]
"chaukas" = ["py.typed"]